--- a/css/main.css
+++ b/css/main.css
@@ -300,3 +300,8 @@ footer span {
   margin-top: 1em;
   margin-left: 1em;
 }
+
+.estilo_para_commit {
+  background-color: black;
+  color: black;
+}
